--- a/index.html
+++ b/index.html
@@ -13,15 +13,8 @@
 
     <body>
         <main>
-            <h1>Hello World!</h1>
-            <div>
-                <h2>Aufgabe 01</h2>
-                <img src="images/aufgabe-01.svg" />
-            </div>
-            <div>
-                <h2>Aufgabe 02</h2>
-                <img src="images/aufgabe-02.svg" />
-            </div>
+            <h1>Webseite von ...</h1>
+            <section></section>
         </main>
     </body>
 </html>
