Added some exercises.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <main>
             <h1>Webseite von ...</h1>
             <section></section>
+            <section><h2></h2></section>
         </main>
     </body>
 </html>
