Add more tests for ex03.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <body>
         <main>
             <h1>Webseite von ...</h1>
-            <section></section>
-            <section><h2></h2></section>
+            <section>Hier ist Text</section>
+            <section>
+                <h2>Titel</h2>
+            </section>
         </main>
     </body>
 </html>
