Add more tests to ex03.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <h1>Webseite von ...</h1>
             <section>Hier ist Text</section>
             <section>
-                <h2>Titel</h2>
+                <h2></h2>
+                <p>aljsd</p>
+                <p></p>
             </section>
         </main>
     </body>
