--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <body>
         <main>
-            <h1>Webseite von ...</h1>
+            <h1>Webseite von ... Ondrej</h1>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
         </main>
     </body>
 </html>
